<resources>
    <string name="app_name">Shared Preference</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">Login</string>
    <string name="welcome_back">Find your Dream House!</string>
    <string name="please_login">Please Login to your Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="from_shared_preference">From Shared Preference</string>
    <string name="user_details">User Details</string>
    <string name="user_image">User Image</string>
    <string name="select_your_date">Select Your Date</string>
    <string name="age">Age</string>
    <string name="call">Call</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="for_age_calculation">For Age Calculation</string>
    <string name="age_result">%1$d years, %2$d months, %3$d days</string>
    <string name="bmi_result">Your BMI is: %.2f</string>

    <string name="rooms">Rooms: %1$s</string>
    <string name="bedrooms">Bedrooms: %1$s</string>
    <string name="bathrooms">Bathrooms: %1$s</string>
    <string name="floor">Floor: %1$s</string>
    <string name="type">Type: %1$s</string>
    <string name="interior">Interior: %1$s</string>
    <string name="size">Size: %1$s</string>
    <string name="area">Area: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="user_email">User Email: %1$s</string>

    <string name="filter_by_type_prompt">Filter by Type</string>
    <string name="apply_filter">Apply Filter</string>
</resources>