<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/user_image"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/tvIntent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_details"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_section"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewIntent1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="#322D2D"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewIntent2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/email"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="#322D2D"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewIntent3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/number"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="#322D2D"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAgeCalculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/for_age_calculation"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_section"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAgeGiven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_shape"
                    android:gravity="center"
                    android:hint="Enter Your Age"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnCalcute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calculate"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:cornerRadius="20dp"/>

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For BMI Calculation"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_section"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Height (in meters)"
                    android:layout_marginTop="10dp"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Weight (in kg)"
                    android:inputType="numberDecimal"/>

                <Button
                    android:id="@+id/btnCalculateBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Calculate BMI"
                    app:cornerRadius="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDialer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    app:cornerRadius="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/call" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/logout"
                    android:layout_marginStart="10dp"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>