<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".DashboardActivity">

    <!-- Dashboard Title -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dashboard_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingVertical="16dp"
                android:layout_marginTop="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/property"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categories"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingVertical="16dp"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/btnUser"
                android:text="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/btnProfile"
                android:text="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/btnPropertyAdd"
                android:text="Property Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/btnPropertyView"
                android:text="Property List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>